# NESTstack

./: COMMUNITY.md  EXTENDING.md  README.md  types.ts
NESTchat/: nestchat.ts
NESTdesktop/: README.md  config.public.json  local-agent.js  package-lock.json  package.json  start.bat
NESTdesktop/dashboard/: NESTCODE.md  autonomous.html  chat.html  code.html  companion.html  display.html  gallery.html  housekeeping.html  human.html  index.html  manifest.json  neural.html  orb.html  serve.js  sw.js  us.html  writing.html
NESTdesktop/pc-tools/: app.js  clipboard.js  file-edit.js  file-read.js  file-write.js  glob.js  grep.js  index.js  process.js  screenshot.js  shell.js  web.js
NESTdesktop/src-tauri/: Cargo.toml  tauri.conf.json
NESTdesktop/src-tauri/icons/: icon.icns
NESTdesktop/src-tauri/src/: lib.rs  main.rs
NESTeq/nexus-ingester/: README.md  migration-plan.md  package.json
community/: .gitignore  README.md  config.secret.json.example
community/dashboard/: setup.html
daemon/: README.md  daemon-types.ts
dashboard/src/: chats.html
discord/: README.md  _signature.py  kairos.ts
discord/worker/: index.ts  wrangler.toml.example
gateway/: carrier-profile.example.json  wrangler.toml.example
gateway/src/: carrier.ts  chat.ts  daemon.ts  env.ts  index.ts  mobile.ts  tts.ts  types.ts
know/: README.md  nestknow.ts  tools.ts  wrangler.toml.example
know/migrations/: 0012_nestknow.sql  (+1 more)
memory/: .gitignore  AI-README.md  ATTRIBUTION.md  Getting Started — Dashboard Edition.md  Getting Started — Your First AI Mind.md  LICENSE  README.md
(+92 files in other folders)
